--- a/Views/Bet/Receipt.cshtml
+++ b/Views/Bet/Receipt.cshtml
@@ -23,7 +23,7 @@ else
                     <th>Potential Win ($)</th>
                     <th>Status</th>
                     <th>Placed At</th>
-                    <th>Action</th> <!-- New column for Claim button -->
+                    <th>Action</th> 
                 </tr>
             </thead>
             <tbody>
