--- a/Views/Bet/PlaceBet.cshtml
+++ b/Views/Bet/PlaceBet.cshtml
@@ -29,15 +29,15 @@
                 <div class="bet-options">
                     <label>
                         <input type="radio" name="BetType" value="1" required />
-                        1 (@match.Odds1:F2)
+                        1 (@match.Odds1:)
                     </label>
                     <label>
                         <input type="radio" name="BetType" value="X" />
-                        X (@match.OddsDraw:F2)
+                        X (@match.OddsDraw:)
                     </label>
                     <label>
                         <input type="radio" name="BetType" value="2" />
-                        2 (@match.Odds2:F2)
+                        2 (@match.Odds2:)
                     </label>
                 </div>
 
